--- a/Tribute page/style.css
+++ b/Tribute page/style.css
@@ -39,7 +39,7 @@ body {
 .left {
     font-size: 75px;
     display: inline-block;
-    transform: rotateY(50deg) skew(0deg, -10deg);
+    transform: rotateY(-50deg) skew(0deg, -10deg);
 }
 
 .right {
@@ -48,12 +48,16 @@ body {
     transform: rotateY(50deg) skew(0deg, 10deg);
 }
 
-section {
+#tribute-info {
     margin: 0 auto;
-    padding: 15px;
+    margin-top: 10px;
     width: 850px;
     text-align: center;
     font-size: 20px;
+}
+
+#company {
+    text-decoration: underline;
 }
 
 #band-title {
@@ -61,6 +65,24 @@ section {
     font-size: 24px;
 }
 
+.list-1 {
+    float: left;
+    margin-left: 210.5px;
+}
+
+.list-2 {
+    float: right;
+    margin-right: 210.5px;
+}
+
+.albums, .awards {
+    font-family: Paramore;
+    font-size: 24px;
+    text-align: center;
+}
+
 footer {
     text-align: center;
+    clear: both;
+    padding: 25px;
 }
