--- a/Tribute page/style.css
+++ b/Tribute page/style.css
@@ -18,7 +18,7 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    height: 350px;
+    height: auto;
     width: auto;
     max-width: 100%;
 }
