--- a/Tribute page/style.css
+++ b/Tribute page/style.css
@@ -65,9 +65,16 @@ body {
     font-size: 24px;
 }
 
+#lists {
+    border: solid .3px #FFF;
+    
+}
+
 .list-1 {
     float: left;
+    margin-top: 20px;
     margin-left: 210.5px;
+    margin-bottom: 20px;
 }
 
 .list-2 {
@@ -82,6 +89,7 @@ body {
 }
 
 footer {
+    border-top: solid .3px #FFF;
     text-align: center;
     clear: both;
     padding: 25px;
