--- a/Tribute page/style.css
+++ b/Tribute page/style.css
@@ -9,7 +9,9 @@
 }
 
 body {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background: linear-gradient(#d8a6cb, #9996cb);
     font-family: "Bebas Neue";
 }
@@ -48,12 +50,18 @@ body {
     transform: rotateY(50deg) skew(0deg, 10deg);
 }
 
+
 #tribute-info {
     margin: 0 auto;
     margin-top: 10px;
-    width: 850px;
     text-align: center;
-    font-size: 20px;
+}
+
+p {
+    align-self: center;
+    width: 850px;
+    flex-shrink: 10;
+    font-size: 20px;    
 }
 
 #company {
@@ -66,30 +74,31 @@ body {
 }
 
 #lists {
-    border: solid .3px #FFF;
-    
+    align-items: baseline;
+    border-top: solid .3px #FFF;
+    border-bottom: solid .3px #ffffff;
+    display: flex;
+    justify-content: space-evenly;    
 }
 
 .list-1 {
     float: left;
     margin-top: 20px;
-    margin-left: 210.5px;
     margin-bottom: 20px;
 }
 
 .list-2 {
     float: right;
-    margin-right: 210.5px;
 }
 
 .albums, .awards {
     font-family: Paramore;
     font-size: 24px;
+    border-top: solid .3-top;
     text-align: center;
 }
 
 footer {
-    border-top: solid .3px #FFF;
     text-align: center;
     clear: both;
     padding: 25px;
