--- a/Tribute page/style.css
+++ b/Tribute page/style.css
@@ -65,6 +65,7 @@ p {
     flex-shrink: 10;
     font-size: 20px;    
     padding: 0 100px;
+    margin-bottom: 30px;
 }
 
 #company {
@@ -109,7 +110,7 @@ footer {
     padding: 25px;
 }
 
-@media screen and (max-width: 360px) {
+@media screen and (orientation: portrait) {
     #lists {
         display: flex;
         flex-direction: column;
