--- a/Tribute page/style.css
+++ b/Tribute page/style.css
@@ -120,7 +120,7 @@ footer {
     }
 
     .awards-list, .albums-list {
-        font-size: 20px;
+        font-size: 1.3em;
         display: flex;
         flex-direction: column;
         align-items: center;
