Applied changes to the footer.

--- a/Namefy/style.css
+++ b/Namefy/style.css
@@ -105,3 +105,12 @@ h1, h2, h3, h4, h5, h6, button {
     padding: 20px 0;
     text-transform: none;
 }
+
+.footer a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.footer a:hover {
+    text-decoration: underline;
+}
