--- a/Namefy/style.css
+++ b/Namefy/style.css
@@ -106,7 +106,7 @@ h1, h2, h3, h4, h5, h6, button {
     text-transform: none;
 }
 
-.footer a {
+a {
     text-decoration: none;
     color: #fff;
 }
