--- a/Namefy/style.css
+++ b/Namefy/style.css
@@ -114,3 +114,11 @@ a {
 .footer a:hover {
     text-decoration: underline;
 }
+
+@media screen and (max-width: 300px) {
+    * {
+        height: 100vh;
+        width: 100%;
+        margin: 0;
+    }
+}
