Changed container vh.

--- a/Namefy/style.css
+++ b/Namefy/style.css
@@ -11,7 +11,7 @@ h1, h2, h3, h4, h5, h6, button {
 } 
 
 .container {
-    height: 100%;
+    height: 90vh;
     width: 100%;
     display: flex;
     flex-direction: column;
