--- a/Namefy/style.css
+++ b/Namefy/style.css
@@ -113,7 +113,8 @@ a {
     text-decoration: underline;
 }
 
-@media screen and (max-width: 300px) {
+@media screen and (min-device-width: 300px) 
+and (max-device-width: 800px) {
     * {
         height: 100vh;
         width: 100%;
@@ -125,9 +126,10 @@ a {
         width: 100%;
     }
 
-    .functionality {
+    /* .functionality {
+        border: red solid 2px;
         width: 100%;
-    }
+    } */
 
     #user-input {
         height: 40px;
