--- a/Namefy/style.css
+++ b/Namefy/style.css
@@ -31,6 +31,8 @@ h1, h2, h3, h4, h5, h6, button {
     text-align: center;
     position: relative;
     top: 5vh;
+    height: auto;
+    margin-bottom: 160px;
 }
 
 .title {
@@ -38,12 +40,13 @@ h1, h2, h3, h4, h5, h6, button {
 }
 
 .functionality {
-    border: red solid 2px;
+    /* border: red solid 2px; */
     display: inline-block;
     width: 40%;
     text-align: center;
     position: relative;
     bottom: 15vh;
+    padding: 0 20px;
 }
 
 .label {
@@ -59,7 +62,7 @@ h1, h2, h3, h4, h5, h6, button {
     background-color: #282828;
     color: #fff;
     border: none;
-    padding-left: 15px;
+    padding-left: 10px;
     letter-spacing: .5px;
 }
 
@@ -126,7 +129,7 @@ and (max-device-width: 800px) {
 
     .functionality {
         border: red solid 2px;
-        width: 70%;
+        width: 90%;
     }
 
     #user-input {
@@ -139,5 +142,9 @@ and (max-device-width: 800px) {
         border: none;
         padding-left: 15px;
         letter-spacing: .5px;
+    }
+
+    .btn {
+        width: 100%;
     }
 }
