--- a/Namefy/style.css
+++ b/Namefy/style.css
@@ -126,7 +126,7 @@ a {
 }
 
 @media screen and (min-width: 300px) 
-and (max-width: 600px) {
+and (max-width: 500px) {
     .container {
         overflow: hidden;
         width: 100%;
@@ -184,6 +184,14 @@ and (max-width: 600px) {
     }
 }
 
-/* @media screen and (min-width: 700px) and (max-width: 1200px) {
+@media screen and (min-width: 700px) and (max-width: 1200px) {
+    .functionality {
+        position: relative;
+        top: 8vh;
+    }
 
-} */
+    .btn {
+        position: relative;
+        top: 5vh;
+    }
+}
