--- a/Namefy/style.css
+++ b/Namefy/style.css
@@ -194,4 +194,10 @@ and (max-width: 500px) {
         position: relative;
         top: 5vh;
     }
+
+    .footer p {
+        height: auto;
+        padding: 30px 0;
+        text-transform: none;
+    }
 }
