--- a/Namefy/style.css
+++ b/Namefy/style.css
@@ -104,7 +104,7 @@ h1, h2, h3, h4, h5, h6, button {
 
 .footer p {
     height: auto;
-    padding: 30px 0;
+    padding: 24px 0;
     text-transform: none;
 }
 
@@ -159,7 +159,7 @@ and (max-width: 600px) {
 
     #playlist-name {
         height: 100px;
-        margin-bottom: 100px;
+        margin-bottom: 70px;
     }
     
     #playlist-name p {
@@ -196,7 +196,7 @@ and (max-width: 600px) {
     
     #playlist-name {
         height: 100px;
-        margin-bottom: 100px;
+        margin-bottom: 70px;
     }
     
     #playlist-name p {
@@ -211,7 +211,7 @@ and (max-width: 600px) {
     }
     .footer p {
         height: auto;
-        padding: 24px 0;
+        /* padding: 24px 0; */
         text-transform: none;
     }
 }
