--- a/projeto-dwe/css/style.css
+++ b/projeto-dwe/css/style.css
@@ -102,6 +102,11 @@ ul {
     margin: 30px 0;
 }
 
+.about li {
+    font-weight: 300;
+    color: rgb(65, 63, 63);
+}
+
 .footer {
     background-color: rgb(53, 53, 53);
     height: 100px;   
