--- a/projeto-dwe/css/style.css
+++ b/projeto-dwe/css/style.css
@@ -27,10 +27,6 @@ header {
     flex-direction: column;
 }
 
-/* .header-wrapper a {
-    margin-left: 20px;
-} */
-
 .logo {
     max-width: 120px;
     max-height: 120px;
@@ -63,6 +59,7 @@ ul {
 .main-wrapper p {
     font-weight: 300;
     color: rgb(65, 63, 63);
+    text-align: justify;
 }
 
 .card-container h3 {
@@ -102,7 +99,7 @@ ul {
 
 .about p {
     margin: 30px 0;
-    text-align: justify;
+    /* text-align: justify; */
 }
 
 .about li {
