--- a/projeto-dwe/css/style2.css
+++ b/projeto-dwe/css/style2.css
@@ -132,6 +132,10 @@ table td {
         width: 40%;
     }
 
+    figcaption {
+        font-size: 1rem;
+    }
+
     table {
         width: 80%;
     }
